# Hum2Sol

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/audio/: wav_reader.cpp  wav_reader.h
src/dsp/: yin.cpp  yin.h
src/music/: pitch.cpp  pitch.h  segment.cpp  segment.h  smooth.cpp  smooth.h  solfege.cpp  solfege.h
